crates/mensura-cli/tests/corpus/reject/missing_colon.mensura
// Rejected at parse: a field needs a `:` before its type.
unit U {
  id string
}
